refactor java version